--- a/themes/bluehoney/home.html
+++ b/themes/bluehoney/home.html
@@ -1,5 +1,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<script>document.title="{{SITENAME}}"</script>
+
 <style>
 [[./theme/theme.css]]
 </style>
